--- a/projekt-simpledoc-demo.html
+++ b/projekt-simpledoc-demo.html
@@ -148,8 +148,10 @@
 
       
       <!-- Neue Checkbox hinzufügen -->
-      <input type="text" id="new-status" placeholder="neue Beobachtung">
-      <button type="button" id="add-status">+</button>
+      <div class="form-group">
+        <input type="text" id="new-status" placeholder="neue Beobachtung">
+        <button type="button" id="add-status">+</button>
+      </div>
 
 
       <!-- Häufige Hinweise -->
