--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           
             <div class="project-actions">
               <a href="projekt-simpledoc-demo.html" class="btn">Demo öffnen</a>
-              <a href="projekt-simpledoc.html" class="btn btn-secondary">Projekt ansehen</a>
+              <a href="Projekte/simpleDoc-info.html" class="btn btn-secondary">Projekt ansehen</a>
             </div>
           </article>        
         </article>
@@ -398,6 +398,7 @@
 
 </body>
 </html>
+
 
 
 
