--- a/Projekte/simpleDoc-info.html
+++ b/Projekte/simpleDoc-info.html
@@ -6,7 +6,7 @@
   <title>SimpleDoc – Projektbeschreibung</title>
 
   <meta name="description" content="SimpleDoc – eine minimalistische Demo für strukturierte Kurznotizen im Praxisalltag.">
-
+  <link rel="stylesheet" href="css/projektinfo.css">
 </head>
 <body>
 
@@ -68,7 +68,18 @@
         bleibt die Demo transparent und leicht nachvollziehbar.
       </p>
 
-      <h2>Projektstatus</h2>
+     <h2>Projektstatus</h2>
       <p>
         SimpleDoc befindet sich aktuell im Demo-Stadium
-        und
+        und dient als Beispiel für eine minimalistische,
+        praxisnahe Webanwendung.
+        Das Projekt kann bei Bedarf weiterentwickelt
+        oder an spezifische Anforderungen angepasst werden.
+      </p>
+
+    </article>
+
+  </main>
+
+</body>
+</html>
