--- a/Projekte/kindertreff-info.html
+++ b/Projekte/kindertreff-info.html
@@ -6,7 +6,7 @@
   <title>Kindertreff – Projektbeschreibung</title>
 
   <meta name="description" content="Kindertreff – eine ruhige, datensparsame App-Idee zur Organisation von Spielverabredungen für Kinder.">
-<link rel="stylesheet" href="../css/projektinfo.css">
+<link rel="stylesheet" href="../css/projektinfos.css">
 </head>
 <body>
 
