--- a/Projekte/simpleDoc-info.html
+++ b/Projekte/simpleDoc-info.html
@@ -6,7 +6,7 @@
   <title>SimpleDoc – Projektbeschreibung</title>
 
   <meta name="description" content="SimpleDoc – eine minimalistische Demo für strukturierte Kurznotizen im Praxisalltag.">
-  <link rel="stylesheet" href="css/projektinfos.css">
+  <link rel="stylesheet" href="../css/projektinfos.css">
 </head>
 <body>
 
