--- a/Projekte/simpleDoc-info.html
+++ b/Projekte/simpleDoc-info.html
@@ -79,6 +79,10 @@
 
     </article>
 
+        <nav class="project-nav">
+          <a href="../index.html" class="back-link">← Zurück zu den Projekten</a>
+        </nav>
+
   </main>
 
 </body>
