--- a/Projekte/kindertreff-info.html
+++ b/Projekte/kindertreff-info.html
@@ -84,6 +84,10 @@
 
     </article>
 
+    <nav class="project-nav">
+      <a href="../index.html" class="back-link">← Zurück zu den Projekten</a>
+    </nav>
+
   </main>
 
 </body>
