--- a/Projekte/kindertreff-info.html
+++ b/Projekte/kindertreff-info.html
@@ -5,90 +5,119 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kindertreff – Projektbeschreibung</title>
 
-  <meta name="description" content="Kindertreff – eine ruhige, datensparsame App-Idee zur Organisation von Spielverabredungen für Kinder.">
-<link rel="stylesheet" href="../css/projektinfos.css">
+  <meta name="description" content="Kindertreff – eine ruhige, datensparsame Web-Demo zur Organisation spontaner Spielverabredungen für Kinder.">
+  <link rel="stylesheet" href="../css/projektinfos.css">
 </head>
 <body>
 
-  <main class="container">
+<main class="container">
+  <article class="project">
 
-    <article class="project">
+    <h1>Kindertreff</h1>
+    <p class="subtitle">Ruhige Spielverabredungen ohne Stress</p>
 
-      <h1>Kindertreff</h1>
+    <p>
+      Kindertreff ist eine konzeptionelle Web-Demo, entstanden aus einem realen
+      Alltagsproblem vieler Eltern: Spontane Spielverabredungen zu koordinieren
+      ist oft unnötig aufwendig. Häufig müssen mehrere Eltern einzeln kontaktiert
+      werden, nur um herauszufinden, wer überhaupt Zeit hat.
+    </p>
 
-      <p>
-        Kindertreff ist eine bewusst reduzierte App-Idee, die aus einem realen Alltagsproblem entstanden ist:
-        der oft mühsamen Koordination von Spielverabredungen zwischen Eltern.
-        Ziel ist ein ruhiges, übersichtliches Werkzeug – ohne Social-Media-Mechaniken,
-        ohne ständige Kommunikation und ohne unnötige Datensammlung.
-      </p>
+    <p>
+      Ziel von Kindertreff ist ein ruhiges, übersichtliches Koordinationswerkzeug –
+      ohne Social-Media-Mechaniken, ohne Kommunikationsdruck und ohne unnötige
+      Datensammlung.
+    </p>
 
-      <h2>Ausgangssituation</h2>
-      <p>
-        Wenn Kinder spontan spielen möchten, müssen Eltern häufig mehrere andere Eltern
-        einzeln kontaktieren, um herauszufinden, wer Zeit hat.
-        Das kostet Zeit, erzeugt Druck und führt nicht selten dazu,
-        dass Treffen aus organisatorischen Gründen gar nicht zustande kommen.
-      </p>
+    <h2>Ausgangssituation</h2>
+    <p>
+      Wenn Kinder spontan spielen möchten, entsteht für Eltern schnell
+      organisatorischer Aufwand. Mehrere Nachrichten, Wartezeiten auf Antworten
+      und soziale Unsicherheiten führen nicht selten dazu, dass Treffen aus
+      praktischen Gründen gar nicht zustande kommen.
+    </p>
 
-      <h2>Idee & Ansatz</h2>
-      <p>
-        Kindertreff verfolgt einen anderen Ansatz:
-        Eltern können freiwillig und zeitlich begrenzt angeben,
-        wann ihr Kind zum Spielen verfügbar ist.
-        Diese Information wird bewusst einfach dargestellt
-        und ist auf kleine, vertraute Gruppen beschränkt.
-      </p>
+    <h2>Idee & Konzept</h2>
+    <p>
+      Die Idee hinter Kindertreff ist bewusst einfach:
+      Eltern tragen freiwillig und zeitlich begrenzt ein, wann ihr Kind zum
+      Spielen verfügbar ist. Diese Information wird klar und reduziert
+      dargestellt und bleibt auf kleine, vertraute Gruppen beschränkt.
+    </p>
 
-      <p>
-        Es gibt keinen Chat-Zwang, keine öffentlichen Profile
-        und keinen algorithmischen Feed.
-        Die App soll informieren – nicht beschäftigen.
-      </p>
+    <p>
+      Es gibt keinen Chat-Zwang, keine öffentlichen Profile und keinen
+      algorithmischen Feed. Die Anwendung soll informieren – nicht beschäftigen.
+    </p>
 
-      <h2>Geplante Funktionen</h2>
-      <ul>
-        <li>Eintragen von Spielverfügbarkeiten (z. B. heute, morgen, diese Woche)</li>
-        <li>Gruppenstruktur (z. B. Kindergarten, Nachbarschaft, Verein)</li>
-        <li>optionale Angaben zu Uhrzeit, Ort oder Präferenzen</li>
-        <li>klare zeitliche Begrenzung und automatisches Entfernen abgelaufener Einträge</li>
-        <li>keine dauerhafte Datenspeicherung</li>
-      </ul>
+    <h2>Grundprinzip</h2>
+    <ul>
+      <li>Status statt Kommunikation</li>
+      <li>Übersicht statt Feed</li>
+      <li>Private Gruppen statt Öffentlichkeit</li>
+    </ul>
 
-      <h2>Datenschutz & Haltung</h2>
-      <p>
-        Datenschutz steht im Mittelpunkt des Konzepts.
-        Die Demo-Version speichert Daten ausschließlich lokal im Browser
-        und verzichtet vollständig auf Benutzerkonten oder Server.
-        Alle Einträge sind zeitlich begrenzt und jederzeit löschbar.
-      </p>
+    <h2>Geplante Funktionen</h2>
+    <ul>
+      <li>Eintragen von Spielverfügbarkeiten (z. B. heute, morgen, diese Woche)</li>
+      <li>Organisation über Gruppen (z. B. Kita, Nachbarschaft, Freundeskreis)</li>
+      <li>Optionale Angaben zu Uhrzeit, Ort oder Hinweisen</li>
+      <li>Automatisches Entfernen abgelaufener Einträge</li>
+      <li>Keine dauerhafte Speicherung von Daten</li>
+    </ul>
 
-      <p>
-        Kindertreff versteht sich nicht als soziales Netzwerk,
-        sondern als stilles Organisationswerkzeug
-        für kleine, vertraute Gruppen.
-      </p>
+    <p>
+      Kindertreff versteht sich ausdrücklich nicht als soziales Netzwerk,
+      sondern als ruhiges Koordinationswerkzeug für überschaubare,
+      private Kontexte.
+    </p>
 
-      <h2>Projektstatus</h2>
-      <p>
-        Aktuell befindet sich Kindertreff in der Konzept- und Demo-Phase.
-        Die Anwendung wird schrittweise als Web-Demo entwickelt,
-        um Ideen zu testen, Feedback zu sammeln
-        und das tatsächliche Potenzial realistisch einzuschätzen.
-      </p>
+    <h2>Fokus & Gestaltung</h2>
+    <ul>
+      <li>Reduziertes, ruhiges User Interface</li>
+      <li>Keine öffentlichen Profile oder Reichweitenmechaniken</li>
+      <li>Konsequente Datensparsamkeit</li>
+      <li>Verzicht auf Gamification, Push-Nachrichten und Ablenkung</li>
+    </ul>
 
-      <p>
-        Eine mögliche Weiterentwicklung als Progressive Web App oder mobile Anwendung
-        wird bewusst erst zu einem späteren Zeitpunkt evaluiert.
-      </p>
+    <h2>Datenschutz & Haltung</h2>
+    <p>
+      Datenschutz ist ein zentraler Bestandteil des Konzepts.
+      Die Demo speichert Daten ausschließlich lokal im Browser und
+      verzichtet vollständig auf Benutzerkonten oder Server.
+      Alle Einträge sind zeitlich begrenzt, jederzeit löschbar
+      und nur für die jeweilige Person sichtbar.
+    </p>
 
-    </article>
+    <h2>Technischer Ansatz</h2>
+    <ul>
+      <li>HTML5 & modernes, frameworkfreies CSS</li>
+      <li>Mobile-first & responsive</li>
+      <li>Aktuell als statische Web-Demo umgesetzt</li>
+      <li>Perspektivisch denkbar als PWA oder App-Prototyp</li>
+    </ul>
+
+    <h2>Ziel & Projektstatus</h2>
+    <p>
+      Ziel ist die Entwicklung einer funktionalen Demo mit klarem
+      konzeptionellen Fokus, sauberer Struktur und bewusster Reduktion.
+      Kindertreff befindet sich derzeit in der Konzept- und Demo-Phase
+      und wird schrittweise weiterentwickelt, um Ideen zu testen
+      und Feedback zu sammeln.
+    </p>
+
+    <p>
+      Eine mögliche Weiterentwicklung als Progressive Web App oder
+      native Anwendung wird bewusst erst zu einem späteren Zeitpunkt
+      evaluiert.
+    </p>
 
     <nav class="project-nav">
       <a href="../index.html" class="back-link">← Zurück zu den Projekten</a>
     </nav>
 
-  </main>
+  </article>
+</main>
 
 </body>
 </html>
