--- a/Projekte/kindertreff-info.html
+++ b/Projekte/kindertreff-info.html
@@ -112,9 +112,11 @@
       evaluiert.
     </p>
 
-    <nav class="project-nav">
-      <a href="../index.html" class="back-link">← Zurück zu den Projekten</a>
-    </nav>
+    <div class="back-wrapper">
+      <a href="../index.html" class="back-button">
+        ← Zurück zu den Projekten
+      </a>
+    </div>    
 
   </article>
 </main>
