--- a/Projekte/simpleDoc-info.html
+++ b/Projekte/simpleDoc-info.html
@@ -79,9 +79,12 @@
 
     </article>
 
-        <nav class="project-nav">
-          <a href="../index.html" class="back-link">← Zurück zu den Projekten</a>
-        </nav>
+        <div class="back-wrapper">
+          <a href="../index.html" class="back-button">
+            ← Zurück zu den Projekten
+          </a>
+        </div>
+
 
   </main>
 
