--- a/projekt-kindertreff-demo.html
+++ b/projekt-kindertreff-demo.html
@@ -29,7 +29,9 @@
       background: var(--surface);
       border-bottom: 1px solid var(--border);
       padding: 1.25rem;
+      text-align: center;
     }
+
 
     main {
       max-width: 760px;
