--- a/projekt-kindertreff-demo.html
+++ b/projekt-kindertreff-demo.html
@@ -31,6 +31,13 @@
       padding: 1.25rem;
       text-align: center;
     }
+    header h1 {
+      margin: 0;
+      font-size: 1.35rem;
+      font-weight: 600;
+      letter-spacing: 0.02em;
+    }
+
 
 
     main {
